--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,8 @@
 	path = code/tacc-openneuro
 	url = https://github.com/poldracklab/tacc-openneuro.git
 	datalad-url = https://github.com/poldracklab/tacc-openneuro.git
+[submodule "sourcedata/raw"]
+	path = sourcedata/raw
+	url = https://github.com/OpenNeuroDatasets/ds002153.git
+	datalad-id = cc6fea2e-c976-11e9-98ea-c2ca62c0b303
+	datalad-url = https://github.com/OpenNeuroDatasets/ds002153.git
