--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,8 @@
 	url = https://github.com/OpenNeuroDatasets/ds002153.git
 	datalad-id = cc6fea2e-c976-11e9-98ea-c2ca62c0b303
 	datalad-url = https://github.com/OpenNeuroDatasets/ds002153.git
+[submodule "sourcedata/templateflow"]
+	path = sourcedata/templateflow
+	url = https://github.com/templateflow/templateflow.git
+	datalad-id = c79c47b6-d0fb-11e8-aa11-64006a8a730f
+	datalad-url = https://github.com/templateflow/templateflow.git
