--- a/.gitmodules
+++ b/.gitmodules
@@ -11,7 +11,7 @@
 	path = sourcedata/raw
 	url = https://github.com/OpenNeuroDatasets/ds002153.git
 	datalad-id = cc6fea2e-c976-11e9-98ea-c2ca62c0b303
-	datalad-url = https://github.com/OpenNeuroDatasets/ds002153.git
+	datalad-url = /scratch1/03201/jbwexler/openneuro_derivatives/raw/ds002153
 [submodule "sourcedata/templateflow"]
 	path = sourcedata/templateflow
 	url = https://github.com/templateflow/templateflow.git
